syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "UnionCmd.proto";

// CmdId: 98
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message UnionCmdNotify {
	repeated UnionCmd cmd_list = 13;
}
